--- a/1.0/demo/index.html
+++ b/1.0/demo/index.html
@@ -11,10 +11,9 @@
     }
     .affix-move{
         background-color:#fff;
-        border-bottom: 1px solid #ccc;
-        -moz-box-shadow:0px 3px 5px #919191;
-        -webkit-box-shadow:0px 3px 5px #919191;
-        box-shadow:0px 3px 5px #919191;
+        -webkit-box-shadow: 0 10px 10px -7px #CCCCCC;
+        -moz-box-shadow: 0 10px 10px -7px #CCCCCC;
+        box-shadow: 0 10px 10px -7px #CCCCCC;
     }
 </style>
 <body>
